# advancedGraphicsCourse

./: .gitignore  CMakeLists.txt  README.md
GEN_NOISE/test_full_random/: OUTPUT4.ppm  main.cpp
GEN_NOISE/test_perlin/: main.cpp  outout.ppm  output.ppm  output1.ppm  output2.ppm  output3.ppm  output5.ppm  picture.ppm
GEN_NOISE/test_voronoi/: OUTPUT5.ppm  main.cpp  main_utkast_ett_prickar.cpp  output.ppm  output1.ppm  output2.ppm  output6.ppm  output8.ppm  picture9.ppm  program3
external_src/glm/: CMakeLists.txt
external_src/imgui/: CMakeLists.txt
labhelper/: CMakeLists.txt  Model.cpp  fbo.cpp  labhelper.cpp  labhelper.h  perf.cpp  perf.h
project/: Grid.cpp  Grid.h  L-system.cpp  L-system.h  atmosphere.cpp  background.frag  grass.cpp  grass.h  grass_shader.frag  grass_shader.vert  main.cpp  noise.cpp  noise.h  perlinNoise.cpp  perlinNoise.h  shading.frag  shading.vert  simpleComputeShader.glsl  skyComputeShader.glsl  skyShader.frag  skyShader.vert  testShader.frag  testShader.vert  water.cpp  water.h  waterShader.frag  waterShader.vert
project/myHelper/: cMaterial.h  cMesh.h  cModel.h  cPrimitive.h  camera.h  shader_c.h  shader_s.h
